<resources>
    <string name="app_name">punto2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="num1">Number 1</string>
    <string name="num2">Number 2</string>
    <string name="button1">Calculate</string>
    <string name="result">Result</string>
    <string name="add">Addition</string>
    <string name="subs">Substraction</string>
    <string name="mult">Multiplication</string>
    <string name="div">Division</string>
    <string name="digit">Write number</string>
    <string name="title">Single Calculator</string>
</resources>
