<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0ffff"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        android:textColor="#00008b"
        android:text="@string/title"/>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView android:text="@string/num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:layout_marginTop="10dp"/>
        <!--android:background="#ffff00"-->
        <EditText
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:id="@+id/eNum1"
            android:inputType="numberDecimal"
            android:layout_gravity="center"
            android:hint="@string/digit"
            android:textSize="18dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView android:text="@string/num2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:id="@+id/eNum2"
            android:layout_gravity="center"
            android:hint="@string/digit"
            android:inputType="numberDecimal"
            android:textSize="18dp"/>
    </LinearLayout>
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rgOps">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="18dp"
                android:id="@+id/rbAdd"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subs"
                android:textSize="18dp"
                android:id="@+id/rbSubs"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mult"
                android:textSize="18dp"
                android:id="@+id/rbMul"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/div"
                android:textSize="18dp"
                android:id="@+id/rbDiv"/>

        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/button1"
            android:id="@+id/bCalc"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:layout_marginTop="15dp"
            android:id="@+id/tShow"
            android:textSize="25dp"/>
    </LinearLayout>
</LinearLayout>
